--- a/apps/1d/euler/blast/parameters.ini
+++ b/apps/1d/euler/blast/parameters.ini
@@ -9,8 +9,7 @@ dtv(2)      = 1.0e10    ; max allowable dt
 cflv(1)     = 0.45      ; max allowable Courant number 1/(2k-1)
 cflv(2)     = 0.44      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 3  ; =method(2)= order of accuracy in time
@@ -24,8 +23,8 @@ mrestart    = 0  ; restart from old data (1-yes, 0-no)
 nstart      = 0  ; if mrestart==1: from file q(nstart)_restart.dat
 datafmt     = 1  ; 1 for ascii, 5 for hdf5.
 [grid]
-mx    = 1000   ; number of grid elements in x-direction
-mbc   = 5     ; number of ghost cells on each boundary
+mx    = 500   ; number of grid elements in x-direction
+mbc   = 3     ; number of ghost cells on each boundary
 xlow  = 0.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
 [eulerParams]
