fixed boundary condition routine for Sedov

--- a/apps/2d/euler/sedov_blast/parameters.ini
+++ b/apps/2d/euler/sedov_blast/parameters.ini
@@ -9,6 +9,7 @@ max_cfl     = 0.45      ; max allowable Courant number 1/(2k-1)
 desired_cfl = 0.45      ; desired Courant number
 nv          = 100000    ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
+mpp_limiter = true ; flag for positivity preserving limiter
 space_order = 5  ; order of accuracy in space
 time_order  = 3  ; order of accuracy in time
 verbosity   = 1  ; verbosity of output
@@ -20,8 +21,9 @@ meqn        = 5  ; number of equations
 ; -------------------------------------------------
 ;   Grid data
 ; -------------------------------------------------
+[grid]
 mx    = 160 	; number of grid elements in x-direction
-my    = 160      ; number of grid elements in y-direction
+my    = 160     ; number of grid elements in y-direction
 mbc   = 5       ; number of ghost cells on each boundary
 xlow  = 0.0e0   ; left end point
 xhigh = 1.1e0   ; right end point
