--- a/apps/2d/euler/sedov_blast/parameters.ini
+++ b/apps/2d/euler/sedov_blast/parameters.ini
@@ -2,7 +2,7 @@
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 10        ; number of output times to print results
-tfinal      = 1.e-3     ; final time
+tfinal      = 0.001     ; final time
 initial_dt  = 0.00001   ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.45      ; max allowable Courant number 1/(2k-1)
