--- a/apps/2d/euler/sedov_blast/Makefile
+++ b/apps/2d/euler/sedov_blast/Makefile
@@ -10,6 +10,7 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 # overridden library objects
 #
 FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+AfterQinit              = AfterQinit
 ## ------------------------------------------------------------------------- ##
 
 # place to add object modules
