--- a/apps/2d/mhd/blast/parameters.ini
+++ b/apps/2d/mhd/blast/parameters.ini
@@ -1,12 +1,12 @@
 ; Parameters common to dogpack applications
 [finess]
 ndims       = 2         ; 1, 2, or 3
-nout        = 20         ; number of output times to print results
-tfinal      = 20	; final time
+nout        = 10         ; number of output times to print results
+tfinal      = 0.01	; final time
 initial_dt      = 0.001  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.51      ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.50      ; desired Courant number
+max_cfl     = 1.00      ; max allowable Courant number 1/(2k-1)
+desired_cfl    = 0.50      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5  ; order of accuracy in space
@@ -19,16 +19,14 @@ meqn        = 8  ; number of equations
 mpp_limiter = true
 datafmt     = Silo
 [grid]
-mx    =  128   ; number of grid elements in x-direction
-my    =  128
+mx    =  256   ; number of grid elements in x-direction
+my    =  256
 mbc   =  7      ; number of ghost cells on each boundary
-xlow  =  -10 ; left end point
-xhigh =  10 
-ylow  =  -10
-yhigh =  10
+xlow  =  -0.5 ; left end point
+xhigh =   0.5 
+ylow  =  -0.5
+yhigh =   0.5
 [mhd]
 gamma = 1.6666666666666667   ; gamma (gas constant)
+constrained_transport = true
 
-[vortex]
-kappa = 1
-mu = 1
