introducing MPP limiter calls to 2D Euler code

--- a/apps/2d/euler/sedov_blast/Makefile
+++ b/apps/2d/euler/sedov_blast/Makefile
@@ -9,7 +9,8 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 ## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
-FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
+#FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
 AfterQinit              = AfterQinit
 ## ------------------------------------------------------------------------- ##
 
