--- a/apps/2d/euler/sedov_blast/parameters.ini
+++ b/apps/2d/euler/sedov_blast/parameters.ini
@@ -8,15 +8,17 @@ max_dt      = 1.0e10    ; max allowable dt
 max_cfl     = 0.50      ; max allowable Courant number 1/(2k-1)
 desired_cfl = 0.40      ; desired Courant number
 nv          = 100000    ; max number of time steps per call to DogSolve
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
+;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, Lax-Wendroff)
 mpp_limiter = true ; flag for positivity preserving limiter
-space_order = 5  ; order of accuracy in space
-time_order  = 3  ; order of accuracy in time
+space_order = 9  ; order of accuracy in space
+time_order  = 9  ; order of accuracy in time
 verbosity   = 1  ; verbosity of output
 mcapa       = 0  ; mcapa (capacity function index in aux arrays)
 maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
+global_alpha = true ; flag for global alpha
 
 ; -------------------------------------------------
 ;   Grid data
