--- a/apps/2d/euler/sedov_blast/parameters.ini
+++ b/apps/2d/euler/sedov_blast/parameters.ini
@@ -5,8 +5,8 @@ nout        = 10        ; number of output times to print results
 tfinal      = 1.0       ; final time
 initial_dt  = 0.00001   ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.50      ; max allowable Courant number 1/(2k-1)
-desired_cfl = 0.40      ; desired Courant number
+max_cfl     = 0.36      ; max allowable Courant number 1/(2k-1)
+desired_cfl = 0.35      ; desired Courant number
 nv          = 100000    ; max number of time steps per call to DogSolve
 time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, Lax-Wendroff)
 mpp_limiter = true ; flag for positivity preserving limiter
@@ -17,7 +17,7 @@ mcapa       = 0  ; mcapa (capacity function index in aux arrays)
 maux        = 0  ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (1-yes, 2-no)
 meqn        = 5  ; number of equations
-
+global_alpha = true  ;
 ; -------------------------------------------------
 ;   Grid data
 ; -------------------------------------------------
