--- a/apps/1d/euler/blast/Makefile
+++ b/apps/1d/euler/blast/Makefile
@@ -12,14 +12,15 @@ include $(FINESS)/apps/1d/euler/lib/Makefile.defs
 # uncomment these lines to use the HLL(E) Riemann solver
 #RiemannSolve     = $(LIB1D)/RiemannSolveHLL
 #RiemannSolveLxW  = $(LIB1D)/LaxWendroff/RiemannSolveLxW_HLL
+FinSolveUser           = $(FINESS)/lib/1d/FinSolveButcher
+ConstructIntegratedF   = ConstructIntegratedF
 
 # place to add object modules
 #
 ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
-
 ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES)
 
-TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/1d/euler/lib/ $(LIB_SYS_INCLUDE)
+#TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/1d/euler/lib/ $(LIB_SYS_INCLUDE)
 
 ### targets ###
 
