--- a/apps/1d/euler/blast/parameters.ini
+++ b/apps/1d/euler/blast/parameters.ini
@@ -8,17 +8,18 @@ max_dt      = 1.0e10    ; max allowable dt
 max_cfl     = 0.45      ; max allowable Courant number
 desired_cfl = 0.44      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Multiderivative ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 5   ; order of accuracy in space
-time_order  = 3   ; order of accuracy in time
+time_order  = 4   ; order of accuracy in time
 verbosity   = 1   ; verbosity of output
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false ; source term (true or false)
 meqn        = 5   ; number of equations
 [grid]
-mx    = 500   ; number of grid elements in x-direction
-mbc   = 3     ; number of ghost cells on each boundary
+mx    = 1000  ; number of grid elements in x-direction
+mbc   = 5     ; number of ghost cells on each boundary
 xlow  = 0.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
 [euler]
